HybroGen/RegisterDescriptionParser.py
# Generated from RegisterDescription.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RegisterDescriptionParser ( Parser ):

    grammarFileName = "RegisterDescription.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'v'", "'i'", "'f'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WS", "COMMENT", "INT", "FUNCNAME", "REGWN", 
                      "NEWLINE", "PREFIX", "NAME" ]

    RULE_registerdescription = 0
    RULE_headerlines = 1
    RULE_commentline = 2
    RULE_emptyline = 3
    RULE_registerlines = 4
    RULE_registerline = 5
    RULE_registerlist = 6
    RULE_registerprefix = 7
    RULE_registerfunctionlist = 8
    RULE_registerfunction = 9
    RULE_registerfunctionwn = 10
    RULE_regbankvec = 11
    RULE_regbank = 12
    RULE_registerwidth = 13
    RULE_extension = 14

    ruleNames =  [ "registerdescription", "headerlines", "commentline", 
                   "emptyline", "registerlines", "registerline", "registerlist", 
                   "registerprefix", "registerfunctionlist", "registerfunction", 
                   "registerfunctionwn", "regbankvec", "regbank", "registerwidth", 
                   "extension" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    WS=5
    COMMENT=6
    INT=7
    FUNCNAME=8
    REGWN=9
    NEWLINE=10
    PREFIX=11
    NAME=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RegisterdescriptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def headerlines(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.HeaderlinesContext,0)


        def registerlines(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterlinesContext,0)


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerdescription

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterdescription" ):
                listener.enterRegisterdescription(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterdescription" ):
                listener.exitRegisterdescription(self)




    def registerdescription(self):

        localctx = RegisterDescriptionParser.RegisterdescriptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_registerdescription)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.headerlines()
            self.state = 31
            self.registerlines()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderlinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegisterDescriptionParser.CommentlineContext)
            else:
                return self.getTypedRuleContext(RegisterDescriptionParser.CommentlineContext,i)


        def emptyline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegisterDescriptionParser.EmptylineContext)
            else:
                return self.getTypedRuleContext(RegisterDescriptionParser.EmptylineContext,i)


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_headerlines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeaderlines" ):
                listener.enterHeaderlines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeaderlines" ):
                listener.exitHeaderlines(self)




    def headerlines(self):

        localctx = RegisterDescriptionParser.HeaderlinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_headerlines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 35
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [RegisterDescriptionParser.COMMENT]:
                        self.state = 33
                        self.commentline()
                        pass
                    elif token in [RegisterDescriptionParser.NEWLINE]:
                        self.state = 34
                        self.emptyline()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 37 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(RegisterDescriptionParser.COMMENT, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_commentline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentline" ):
                listener.enterCommentline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentline" ):
                listener.exitCommentline(self)




    def commentline(self):

        localctx = RegisterDescriptionParser.CommentlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_commentline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(RegisterDescriptionParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EmptylineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(RegisterDescriptionParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_emptyline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyline" ):
                listener.enterEmptyline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyline" ):
                listener.exitEmptyline(self)




    def emptyline(self):

        localctx = RegisterDescriptionParser.EmptylineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_emptyline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(RegisterDescriptionParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterlinesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def commentline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegisterDescriptionParser.CommentlineContext)
            else:
                return self.getTypedRuleContext(RegisterDescriptionParser.CommentlineContext,i)


        def registerline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegisterDescriptionParser.RegisterlineContext)
            else:
                return self.getTypedRuleContext(RegisterDescriptionParser.RegisterlineContext,i)


        def emptyline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RegisterDescriptionParser.EmptylineContext)
            else:
                return self.getTypedRuleContext(RegisterDescriptionParser.EmptylineContext,i)


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerlines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterlines" ):
                listener.enterRegisterlines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterlines" ):
                listener.exitRegisterlines(self)




    def registerlines(self):

        localctx = RegisterDescriptionParser.RegisterlinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_registerlines)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 46
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [RegisterDescriptionParser.COMMENT]:
                    self.state = 43
                    self.commentline()
                    pass
                elif token in [RegisterDescriptionParser.NAME]:
                    self.state = 44
                    self.registerline()
                    pass
                elif token in [RegisterDescriptionParser.NEWLINE]:
                    self.state = 45
                    self.emptyline()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 48 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RegisterDescriptionParser.COMMENT) | (1 << RegisterDescriptionParser.NEWLINE) | (1 << RegisterDescriptionParser.NAME))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def extension(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.ExtensionContext,0)


        def regbankvec(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegbankvecContext,0)


        def regbank(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegbankContext,0)


        def registerlist(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterlistContext,0)


        def registerwidth(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterwidthContext,0)


        def registerfunctionlist(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterfunctionlistContext,0)


        def NEWLINE(self):
            return self.getToken(RegisterDescriptionParser.NEWLINE, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterline" ):
                listener.enterRegisterline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterline" ):
                listener.exitRegisterline(self)




    def registerline(self):

        localctx = RegisterDescriptionParser.RegisterlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_registerline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.extension()
            self.state = 51
            self.regbankvec()
            self.state = 52
            self.regbank()
            self.state = 53
            self.registerlist()
            self.state = 54
            self.registerwidth()
            self.state = 55
            self.registerfunctionlist()
            self.state = 57
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 56
                self.match(RegisterDescriptionParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registerprefix(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterprefixContext,0)


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterlist" ):
                listener.enterRegisterlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterlist" ):
                listener.exitRegisterlist(self)




    def registerlist(self):

        localctx = RegisterDescriptionParser.RegisterlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_registerlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.registerprefix()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterprefixContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREFIX(self):
            return self.getToken(RegisterDescriptionParser.PREFIX, 0)

        def INT(self):
            return self.getToken(RegisterDescriptionParser.INT, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerprefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterprefix" ):
                listener.enterRegisterprefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterprefix" ):
                listener.exitRegisterprefix(self)




    def registerprefix(self):

        localctx = RegisterDescriptionParser.RegisterprefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_registerprefix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(RegisterDescriptionParser.PREFIX)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RegisterDescriptionParser.T__0:
                self.state = 62
                self.match(RegisterDescriptionParser.T__0)
                self.state = 63
                self.match(RegisterDescriptionParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterfunctionlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registerfunction(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterfunctionContext,0)


        def registerfunctionwn(self):
            return self.getTypedRuleContext(RegisterDescriptionParser.RegisterfunctionwnContext,0)


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerfunctionlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterfunctionlist" ):
                listener.enterRegisterfunctionlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterfunctionlist" ):
                listener.exitRegisterfunctionlist(self)




    def registerfunctionlist(self):

        localctx = RegisterDescriptionParser.RegisterfunctionlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_registerfunctionlist)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RegisterDescriptionParser.FUNCNAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.registerfunction()
                pass
            elif token in [RegisterDescriptionParser.REGWN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.registerfunctionwn()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterfunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCNAME(self):
            return self.getToken(RegisterDescriptionParser.FUNCNAME, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerfunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterfunction" ):
                listener.enterRegisterfunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterfunction" ):
                listener.exitRegisterfunction(self)




    def registerfunction(self):

        localctx = RegisterDescriptionParser.RegisterfunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_registerfunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(RegisterDescriptionParser.FUNCNAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterfunctionwnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGWN(self):
            return self.getToken(RegisterDescriptionParser.REGWN, 0)

        def INT(self):
            return self.getToken(RegisterDescriptionParser.INT, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerfunctionwn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterfunctionwn" ):
                listener.enterRegisterfunctionwn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterfunctionwn" ):
                listener.exitRegisterfunctionwn(self)




    def registerfunctionwn(self):

        localctx = RegisterDescriptionParser.RegisterfunctionwnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_registerfunctionwn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(RegisterDescriptionParser.REGWN)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RegisterDescriptionParser.T__0:
                self.state = 73
                self.match(RegisterDescriptionParser.T__0)
                self.state = 74
                self.match(RegisterDescriptionParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegbankvecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_regbankvec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegbankvec" ):
                listener.enterRegbankvec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegbankvec" ):
                listener.exitRegbankvec(self)




    def regbankvec(self):

        localctx = RegisterDescriptionParser.RegbankvecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_regbankvec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RegisterDescriptionParser.T__1:
                self.state = 77
                self.match(RegisterDescriptionParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegbankContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_regbank

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegbank" ):
                listener.enterRegbank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegbank" ):
                listener.exitRegbank(self)




    def regbank(self):

        localctx = RegisterDescriptionParser.RegbankContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_regbank)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not(_la==RegisterDescriptionParser.T__2 or _la==RegisterDescriptionParser.T__3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RegisterwidthContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(RegisterDescriptionParser.INT, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_registerwidth

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegisterwidth" ):
                listener.enterRegisterwidth(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegisterwidth" ):
                listener.exitRegisterwidth(self)




    def registerwidth(self):

        localctx = RegisterDescriptionParser.RegisterwidthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_registerwidth)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(RegisterDescriptionParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExtensionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(RegisterDescriptionParser.NAME, 0)

        def getRuleIndex(self):
            return RegisterDescriptionParser.RULE_extension

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtension" ):
                listener.enterExtension(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtension" ):
                listener.exitExtension(self)




    def extension(self):

        localctx = RegisterDescriptionParser.ExtensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_extension)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(RegisterDescriptionParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





